# 1724Project

./: .gitignore  Cargo.toml  Proposal.md  README.md  Schedule.md
client/: Cargo.toml  index.html
client/mydatabase.db/: 000037.sst  000045.sst  000053.sst  IDENTITY  MANIFEST-000049
client/src/: api.rs  constant.rs  endpoints.rs  main.rs  request.rs  router.rs
client/src/components/: home.rs  logout.rs  message.rs  mod.rs  notfound.rs  room.rs  settings.rs  signin.rs  signup.rs  user.rs
client/src/models/: message.rs  mod.rs  room.rs  user.rs
server/: Cargo.toml  README.md
server/src/: auth.rs  authorization_token.rs  db.rs  endpoints.rs  error.rs  main.rs  model.rs  router.rs  routes.rs  server.rs  user.rs  user_trait.rs
server/src/models/: message.rs  mod.rs  room.rs  room_trait.rs  user.rs  user_trait.rs
server/src/services/: auth_service.rs  hash.rs  jwt.rs  mod.rs  status_service.rs  validation.rs
src/: client.rs  main.rs  server.rs
user/: Cargo.toml
user/src/: error.rs  lib.rs  main.rs
user/src/db/: operations.rs
user/src/models/: user.rs
user/src/routes/: auth.rs  status.rs
user/src/services/: auth_service.rs  hash.rs  jwt.rs  status_service.rs  validation.rs
