[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.17"

[[bin]]
name = "server"
path = "src/main.rs"  # 或者你直接让 main.rs 引入 server.rs

[[bin]]
name = "client"
path = "src/client.rs"
