[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
stylist = "0.13.0"
