[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew_styles = { version="0.11", features=["button", "text", "navbar"] }
wasm-bindgen = "0.2.97"
web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
stylist = "0.13.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.47"
gloo-console = "0.3.0"
gloo = "0.11.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.133" }
reqwest = { version = "0.12.9", features = ["json"] }
validator = { version = "0.19.0", features = ["derive"] }
