[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.18.0", features = ["derive"] }
# validator = "^0.15.2"
actix-web = "4.9.0"
faker_rand = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
