[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.19.0", features = ["derive"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
faker_rand = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.209" }
surrealdb = "2.1.2"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
derive_more = { version = "1.0.0", features = ["full"] }
async-trait = "0.1.51"
serde_json = { version = "1.0.133" }
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
lazy_static = "1.4.0"
