[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "=1.0.1"
thiserror = "2.0.3"
